--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,14 +11,11 @@
       content="A utility to search through one's Spotify song library by lyrical content"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:300,400,500,700&display=swap" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎶</text></svg>">
     <title>versefind</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Sorry. This is a React app, which means you need Javascript. It was easier to build that way.</noscript>
     <div id="root"></div>
   </body>
 </html>
